--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
   <head>
     <style type="text/css">
       body {
-        background: black;
-        color: white;
+        background: rgb(191, 71, 71);
+        color: rgb(255, 251, 251);
       }
       div.container {
         max-width: 500px;
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>Cat Gif of the day</h4>
+      <h4>Your Cat Gif of the day</h4>
       <img src="{{url}}" />
       <p><small>Courtesy: <a href="http://www.buzzfeed.com/copyranter/the-best-cat-gif-post-in-the-history-of-cat-gifs">Buzzfeed</a></small></p>
     </div>
